--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
     "@types/express": "^5.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "vite": "^6.0.2"
   }
