--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
   "files": [
     "src/components/Login.tsx",
     "src/App.tsx",
-    "src/components/CitiesList.tsx",
+    "src/components/Signup.tsx",
     "src/main.tsx"
   ]
 }
