--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
