--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-dom": "^4.0.0",
     "node": "^23.4.0",
     "pg": "^8.13.3",
+    "python": "^0.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
